--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
 idna==3.3
 importlib-metadata==1.7.0
 itypes==1.2.0
