--- a/requirements.txt
+++ b/requirements.txt
@@ -11,15 +11,16 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 gunicorn==20.0.4
-psycopg2-binary==2.8.6
 idna==3.3
 importlib-metadata==1.7.0
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 oauthlib==3.2.0
+psycopg2-binary==2.8.6
 pycparser==2.21
 PyJWT==2.4.0
+python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.28.1
